[package]
name = "striker-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
num-format = "0.4"
test-case = "3"
once_cell = "1.19"
rstest = "0.18"
rand = "0.9.1"
http = "1.1"

[features]
coverage_nightly = []

[dev-dependencies]
coverage-helper = "0.2"
mockall = "0.12"
mockito = "1"

