[package]
name = "striker-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
num-format = "0.4"
once_cell = "1.19"  # modern replacement for lazy_static
test-case = "3"
rstest = "0.18"
syslog = "6"
rand = "0.9.1"
http = "1.1"

[features]
coverage_nightly = []

[dev-dependencies]
coverage-helper = "0.2"
mockall = "0.12"
mockito = "1"

